baking diffuse color doesn't work properly with uv project #46085

Closed
opened 2015-09-11 20:29:58 +02:00 by mathieu menuet · 9 comments

System Information
Win7 x64, R9 280X, Catalyst 15.7.1

Blender Version
Broken: c26a9ee

Short description of error
The baked image color is wrong with uv project. It seems the bake takes the modified UV (from UV Project modifier) also the selected image for the bake is set on "Generated" and not UV. So it should bake the full plane but doesn't. Note that UV Project also gives some artifacts. bug cycles bake uv project.JPG

Exact steps for others to reproduce the error
Open attached file: bug_bake_and_uv_project.blend
you can go to viewport render mode to see what it should look like
click on bake: you get a full white image instead of the projection.

**System Information** Win7 x64, R9 280X, Catalyst 15.7.1 **Blender Version** Broken: c26a9ee **Short description of error** The baked image color is wrong with uv project. It seems the bake takes the modified UV (from UV Project modifier) also the selected image for the bake is set on "Generated" and not UV. So it should bake the full plane but doesn't. Note that UV Project also gives some artifacts. ![bug cycles bake uv project.JPG](https://archive.blender.org/developer/F232295/bug_cycles_bake_uv_project.JPG) **Exact steps for others to reproduce the error** Open attached file: [bug_bake_and_uv_project.blend](https://archive.blender.org/developer/F232294/bug_bake_and_uv_project.blend) you can go to viewport render mode to see what it should look like click on bake: you get a full white image instead of the projection.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Author

new versions of the files (corrected):
bug_bake_and_uv_project.blend

bug cycles bake uv project v2.JPG

new versions of the files (corrected): [bug_bake_and_uv_project.blend](https://archive.blender.org/developer/F232303/bug_bake_and_uv_project.blend) ![bug cycles bake uv project v2.JPG](https://archive.blender.org/developer/F232304/bug_cycles_bake_uv_project_v2.JPG)

Added subscriber: @Sergey

Added subscriber: @Sergey

Cam confirm the issue. Wondering if it's caused by Clip extension mode. Will need to have a closer look.

Cam confirm the issue. Wondering if it's caused by Clip extension mode. Will need to have a closer look.

This issue was referenced by d7ceca8c93

This issue was referenced by d7ceca8c934d098832191d6ae6bd2b08dd552d89

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Plugging generated coordinates into the image texture node does nothing, baking is only supported for UV coordinates. You can use a second UV map instead of generated coordinates.

The artifacts in the render and baking are due to poor UV project coordinates for vertices behind the camera, that I've fixed.

Plugging generated coordinates into the image texture node does nothing, baking is only supported for UV coordinates. You can use a second UV map instead of generated coordinates. The artifacts in the render and baking are due to poor UV project coordinates for vertices behind the camera, that I've fixed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46085
No description provided.