Fix T46085: UV project modifier artifacts with vertices behind the camera.